--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -16,10 +16,12 @@ repositories {
 }
 
 dependencies {
-    compile "com.android.support:support-v4:23.3.0"
-    compile "com.android.support:support-v13:23.3.0"
-    compile "com.android.support:cardview-v7:23.3.0"
+    compile 'com.android.support:support-v4:23.3.0'
+    compile 'com.android.support:support-v13:23.3.0'
+    compile 'com.android.support:cardview-v7:23.3.0'
     compile 'com.android.support:appcompat-v7:23.0.0'
+    compile files('D:/AndroidProjects/CognitiveCam/CognitiveCam/libs/java-sdk-3.3.0-jar-with-dependencies.jar')
+    compile 'id.zelory:compressor:1.0.2'
 }
 
 // The sample build uses multiple directories to
